<resources>
    <string name="app_name">Dolan App Tugas Akhir</string>
    <string name="txt_nama_app">DOLAN</string>
    <string name="txt_btn_login">Masuk</string>
    <string name="txt_tanya_akun">Tidak Memiliki Akun?</string>
    <string name="txt_link_register">Daftar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_btn_email_reset">Lanjutkan</string>
    <string name="txt_subtitle_reset_page">Silakan masukkan email kamu \n Agar dapat menerima link reset kata sandi</string>
    <string name="txt_heading_reset_page">Lupa kata sandi kamu?</string>
    <string name="txt_heading_register_page">Daftarkan Akunmu Disini</string>
    <string name="txt_subtitle_register_page">Silakan daftarkan akun kamu di sini</string>
    <string name="txt_edit_text_register_nama">nama</string>
    <string name="txt_edit_text_email_register">email</string>
    <string name="txt_edit_text_kata_sandi_register">password</string>
    <string name="txt_btn_daftar_register">Daftar</string>
    <string name="txt_tanya_punya_akun_register_page">Sudah memiliki akun?</string>
    <string name="txt_link_signin_page">Masuk</string>
    <string name="txt_link_reset_page">Lupa kata sandi?</string>
    <string name="txt_edit_text_email_signin_page">email</string>
    <string name="txt_kata_sandi_signin_page">password</string>
    <string name="txt_subtitle_signin_page">Silakan masukkan akun kamu</string>
    <string name="txt_heading_signin_page">Masuk</string>
    <string name="txt_home_main_menu">Beranda</string>
    <string name="txt_nearby_main_menu">History</string>
    <string name="txt_bookmark_main_menu">Bookmark</string>
    <string name="txt_profile_main_menu">profile</string>
    <string name="txt_heading_home_menu">Beranda</string>
    <string name="txt_ask_user_to_search">Mau pergi kemana?</string>
    <string name="txt_category_main_menu">Kategori</string>
    <string name="search">Search</string>
    <string name="title_activity_category_map">Map</string>
    <string name="ok">Allow</string>
    <string name="cancel">Deny</string>
    <string name="permission_message">Please, Accept the permisiion</string>
    <string name="no_google_playservice_available">no service</string>
    <string name="title_activity_nature_maps">Map</string>
    <string name="title_activity_water_maps">Peta Wisata Air</string>
    <string name="title_activity_shopping_category_map">Peta Belanja</string>
    <string name="title_activity_village_maps">Map</string>
    <string name="title_activity_education_maps">Map</string>
    <string name="title_activity_recreation_category_maps">Peta Wisata Rekreasi</string>
    <string name="title_activity_religi_category_maps">Peta Wisata Religi</string>
    <string name="title_activity_history_category_map">Peta Wisata Sejarah</string>
    <string name="title_activity_food_category_map">Peta Wisata Kuliner</string>
    <string name="string_informasi_detail">Informasi</string>
    <string name="string_lokasi_detail">Lokasi</string>
    <string name="string_foto_detail">Foto</string>
    <string name="string_category_wisata_menu">Wisata</string>
    <string name="string_alam_wisata_category">Alam</string>
    <string name="string_hiburan_wisata_menu">Hiburan</string>
    <string name="string_belanja_wisata_menu">Belanja</string>
    <string name="string_desa_wisata_menu">Desa</string>
    <string name="string_kuliner_wisata_menu">Kuliner</string>
    <string name="string_edukasi_menu">Edukasi</string>
    <string name="string_sejarah_wisata_menu">Sejarah</string>
    <string name="string_air_wisata_menu">Air</string>
    <string name="string_religi_wisata_menu">Religi</string>
    <string name="hotel_dan_transportasi_umum_kategori"><![CDATA[Hotel & Transportasi Umum]]></string>
    <string name="string_hotel_menu">Hotel</string>
    <string name="string_bandara_menu">Bandara</string>
    <string name="string_stasiun_kereta_menu">Stasiun Kereta</string>
    <string name="string_terminal_menu">Terminal</string>
    <string name="string_fasilitas_umum">Fasilitas Umum</string>
    <string name="string_spbu">SPBU</string>
    <string name="string_kantor_polisi">Kantor Polisi</string>
    <string name="string_rumah_sakit">Rumah/nSakit</string>
    <string name="string_photo_detail_info">Foto</string>
    <string name="string_lokasi_detail_menu">Lokasi</string>
    <string name="string_info_desc_detail">Informasi</string>
    <string name="title_activity_hotel_maps">Peta Hotel</string>
    <string name="title_hotel_order_available">Pesan Kamar Tersedia</string>
    <string name="order_link_hotel_traveloka">Traveloka</string>
    <string name="order_link_hotel_tiket">Tiket</string>
    <string name="title_activity_airport_maps">Peta Bandara</string>
    <string name="title_activity_bus_maps">Peta Terminal Bus</string>
    <string name="title_activity_train_maps">Peta Stasiun Kereta</string>
    <string name="string_pelabuhan_menu">Pelabuhan</string>
    <string name="title_activity_ship_map">Peta Pelabuhan</string>
    <string name="search_bus_station_text">cari terminal</string>
    <string name="menu_icon_peta">peta</string>
    <string name="title_activity_gas_station_maps">Peta SPBU</string>
    <string name="title_activity_police_maps">Peta Kantor Polisi</string>
    <string name="string_profile_menu">Profile</string>
    <string name="string_edit_profile_menu">Edit profile</string>
    <string name="string_about_aplikasi">Tentang aplikasi</string>
    <string name="string_no_bookmark">Tidak ada bookmark</string>
    <string name="string_how_to_bookmarked">Agar dapat menyimpan daftar sebagai favorit   Klik disini</string>
    <string name="string_klik_to_menu">Temukan di kategori</string>
    <string name="string_reset_sandi_heading">Permintaan reset sandi terkirim</string>
    <string name="string_reset_sandi_sub_check_inbox">Silakan, cek kotak masuk email   untuk melakukan reset sandi</string>
    <string name="string_continoue_sign_in">Lanjutkan</string>
    <string name="string_success_register">Sukses Terdaftar</string>
    <string name="string_confirm_email">Terima kasih sudah mendaftar, Klik Lanjutkan agar dapat masuk</string>
    <string name="string_continoue_login">Lanjutkan</string>
    <string name="string_email_forget_pass">email</string>
    <string name="string_dummy_welcome">Selamat datang, Hailey Rhode Bieber</string>
    <string name="string_all_home">semua</string>
    <string name="string_recommendation">Rekomendasi tempat wisata</string>
    <string name="string_must_try_food">Makanan yang wajib dicoba</string>
    <string name="string_dummy_profname">Hailey Bieber</string>
    <string name="string_email_dummy">haileyb1245@gmail.com</string>
    <string name="title_activity_hospital_maps">Peta Rumah Sakit</string>
    <string name="upcoming_event">Event Mendatang</string>
    <string name="string_festival_culture_home">Festival dan Budaya</string>
    <string name="register_email_2">Tambahkan foto dan nama</string>
    <string name="sub_register_email2">untuk melengkapi data akun kamu tambahkan foto dan nama</string>
    <string name="btn_reset_email_process">Reset</string>
    <string name="sign_out">Keluar Aplikasi</string>
    <string name="noConnection">Maaf Jaringan tidak tersedia</string>
    <string name="judul_ta">PENGEMBANGAN APLIKASI PARIWISATA SEMARANG MENGGUNAKAN \n METODE EXTREME PROGRAMMING DENGAN IMPLEMENTASI FIREBASE BERBASIS ANDROID</string>
    <string name="nama_ta">Rizki Oktavia Ningrum</string>
    <string name="nim_ta">21120114120049</string>
    <string name="button_ta">Mulai</string>
    <string name="coba_lagi">coba lagi</string>
    <string name="title_activity_profile_settings">ProfileSettings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="txt_btn_save_change">Simpan Perubahan</string>
    <string name="txt_change_password_warn">Jika ingin mengganti password, silakan ganti password. minimal 6 karakter</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>