<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeMenu"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/txt_home_main_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nearbyMenu"
        android:icon="@drawable/ic_location_24dp"
        android:title="@string/txt_nearby_main_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bookmarkMenu"
        android:icon="@drawable/ic_bookmark_24dp"
        android:title="@string/txt_bookmark_main_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileMenu"
        android:icon="@drawable/ic_account_24dp"
        android:title="@string/txt_profile_main_menu"
        app:showAsAction="ifRoom" />
</menu>