<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 RONINGRUM. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_category_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/txt_category_main_menu"
        android:textColor="@color/blackTextPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:id="@+id/ln_alam_tour_home_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.05"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/alam_menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/string_alam_wisata_category"
                    android:textColor="@color/blackTextPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_hiburan_tour_home_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.45"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/hiburan_menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/string_hiburan_wisata_menu"
                    android:textColor="@color/blackTextPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_belanja_tour_home_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.45"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/belanja_menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/string_belanja_wisata_menu"
                    android:textColor="@color/blackTextPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_desa_tour_home_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.05"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/desa_menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/string_desa_wisata_menu"
                    android:textColor="@color/blackTextPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:id="@+id/ln_hotel_public_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.05"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/hotel_menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/string_hotel_menu"
                    android:textColor="@color/blackTextPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_bandara_public_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.45"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/bandara_menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/string_bandara_menu"
                    android:textColor="@color/blackTextPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_train_public_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.45"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/stasiun_kereta" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/string_stasiun_kereta_menu"
                    android:textAlignment="center"
                    android:textColor="@color/blackTextPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_more_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.05"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/string_all_home"
                    android:textColor="@color/blackTextPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>